--- a/src/formComponent/Button/Button.css
+++ b/src/formComponent/Button/Button.css
@@ -27,3 +27,11 @@
     outline: 0;
     box-shadow: none !important;
 }
+.watsappInput .react-tel-input .form-control{
+
+    height: 62px !important;
+}
+.phoneInputSet .react-tel-input .form-control{
+    
+    height: 62px !important;
+}
