--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -9,6 +9,7 @@
     display: flex;
     /* justify-content: space-between; */
     align-items: flex-start;
+    margin-bottom: 6px;
 } 
 .classiFields_mobileMargingRemove {
     margin-bottom: 0px !important;
@@ -81,8 +82,9 @@
 
 .classiFields_contactPerson .classiFields_PersonAboutShow {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 14px !important;
 }
 
 .classiFields_contactPerson .classiFields_PersonAboutShow>div {
@@ -96,6 +98,8 @@
 .classiFields_PersonAboutShow img {
     height: 30px;
     width: 30px;
+    margin-left: 3px;
+    margin-top: 3px;
 }
 
 .classiFieds_forSaledropdown button {
@@ -162,14 +166,14 @@
     color: #E91F63;
     margin-bottom: 0px;
     margin-top: 10px;
+    
 }
 
 .classiFieds_RupeesText span {
-        color: #000000;
-        font-size: 12px;
-        font-weight: 400;
-        margin: 5px;
-    }
+    font-size: 12px;
+    font-weight: 400;
+    color: #000000;
+}
 
 
 .classiFieds_countryName span {
@@ -178,15 +182,21 @@
     line-height: 36px;
     letter-spacing: -0.48px;
     color: #E91F63;
-    /* position: relative;
+    /* letter-spacing: -0.48px; */
+    color: #E91F63;
+    font-family: 'Nunito';
+    font-style: normal;
+      /* position: relative;
     left: 14px;
     right: 0px;
     top: 0px; */
 }
+  
+
 
 .classiFieds_countryName img {
-    width: 14px;
-    height: 17.62px;
+    width: 20px;
+    /* height: 17.62px; */
     /* height: 20.4px;
     width: 16.8px;
     position: absolute;
@@ -218,9 +228,11 @@
     color: #000000;
 }
 
+
+
 .classiFields_iconBackGround {
-    width: 30px;
-    height: 30px;
+    width: 36px;
+    height: 40px;
     background: #E5E5E5;
     mix-blend-mode: multiply;
     border-radius: 6px;
@@ -516,7 +528,25 @@
 
 .classiFields_iconBackGround svg {
     font-size: 22px;
-    margin-left: 4px;
+    margin-left: 8px;
+    margin-top: 8px;
+}
+
+.nodataDisplay {
+    margin-top: 16px;
+    display: flex;
+    padding: 9px 148px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    color: #000000;
+}
+
+.jobType p {
+    margin-top: 10px;
+    color: #E91F63;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 
