--- a/src/appComponents/CommonModule/CommonModule.css
+++ b/src/appComponents/CommonModule/CommonModule.css
@@ -1,12 +1,12 @@
 .socialShare {
     display: flex;
     align-items: center;
-    padding: 10px 0px;
+    padding: 4px 0px;
 }
 
-.socialShare img{
-   width: 60px;
-   margin-right: 15px;
+.socialShare img {
+    width: 60px;
+    margin-right: 15px;
 }
 
 .mapBox {
@@ -29,7 +29,6 @@
     font-size: 13px;
     line-height: 20px;
     color: #000000;
-    font-family: 'poppins';
 }
 
 .mapDetails p {
@@ -43,18 +42,44 @@
     margin: 0px 30px 0px 36px;
 }
 
+.mapLocationSet {
+    background-color: #F1F1F1;
+    align-items: center;
+    padding: 12px 15px;
+}
+
+.mapLocationSet h1 {
+    font-size: 23px;
+    font-weight: 600;
+    margin-bottom: 17px;
+}
+
+.mapLocationSet h5 {
+    margin-top: 0px;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.mapLocationSet p {
+    font-weight: 400;
+    font-size: 14.3px;
+    line-height: 17px;
+}
+
 /* =====Responsive====== */
 
 @media screen and (max-width: 445px) {
-    .socialShare img{
+    .socialShare img {
         width: 40px;
         margin-right: 15px;
-     }
+    }
 }
 
 @media screen and (max-width: 340px) {
-    .socialShare img{
+    .socialShare img {
         width: 35px;
         margin-right: 15px;
-     }
+    }
 }
