--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -98,9 +98,10 @@
 .classiFields_PersonAboutShow img {
     height: 30px;
     width: 30px;
-    margin-left: 3px;
-    margin-top: 3px;
+    margin-left: 6px;
+    margin-top: 5px;
 }
+
 
 .classiFieds_forSaledropdown button {
     background: #EC4624;
@@ -214,15 +215,15 @@
 }
 
 .classiFields_emailHeadingText p:first-child {
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     line-height: 15px;
-    color: #6D6D6D;
+    color: #000000;
 }
 
 .classiFields_emailHeadingText p:nth-child(2) {
     font-size: 16.5px;
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 25px;
     letter-spacing: -0.515625px;
     color: #000000;
@@ -231,12 +232,13 @@
 
 
 .classiFields_iconBackGround {
-    width: 36px;
-    height: 40px;
+    width: 42px;
+    height: 41px;
     background: #E5E5E5;
     mix-blend-mode: multiply;
     border-radius: 6px;
 }
+
 
 .classiFields_whatAppIcon {
     width: 100%;
@@ -528,8 +530,8 @@
 
 .classiFields_iconBackGround svg {
     font-size: 22px;
-    margin-left: 8px;
-    margin-top: 8px;
+    margin-left: 11px;
+    margin-top: 10px;
 }
 
 .nodataDisplay {
