--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -100,9 +100,19 @@
     text-align: center;
     margin: 30px 0px;
 }
-.bannerImg img {
+.bannerImg iframe {
     width: 100%;
+    height: 140px;
+    width:1px;
+    min-width:100%;
+    width:100%;
+    height:100%;
+    border:0;
+    scroll-behavior: unset;
+    
 }
+
+
 
  /* back arrow button css  */
 .backarrowButton svg{
