--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -28,6 +28,7 @@
 .post_Add_CategoryButton .post_AddForm .post_Add_category .form-check-label {
     color: #343434 !important;
 }
+
 .post_Add_CategoryButton:first-child {
     margin-top: 70px;
 }
@@ -155,6 +156,10 @@
     border-radius: 10px;
 }
 
+.post_AddForm #location .css-1dimb5e-singleValue {
+    color: white !important;
+}
+
 .post_AddForm #earningoption .css-13cymwt-control {
     color: white !important;
     background-color: black !important;
@@ -166,6 +171,12 @@
     background-color: black !important;
     border-radius: 10px;
 }
+
+.post_AddForm #earningoption .css-1dimb5e-singleValue {
+    color: white !important;
+}
+
+
 .post_AddForm #countries .css-13cymwt-control {
     color: black !important;
     border-radius: 10px;
@@ -225,7 +236,7 @@
     width: 50%;
 }
 
-.post_AddForm .post_Add_EmploymentEnquiry{
+.post_AddForm .post_Add_EmploymentEnquiry {
     display: flex;
 }
 
@@ -236,6 +247,7 @@
 .css-lnmdiq5-menu {
     color: black !important;
 }
+
 .post_Add_AddPhoto button {
     font-weight: 600;
     font-size: 22px;
@@ -250,10 +262,11 @@
     justify-content: center;
     margin-top: 22px;
 }
+
 .post_Add_Save button {
     font-weight: 700;
     font-size: 22px;
-    line-height: 25px;    
+    line-height: 25px;
     color: #FFFFFF;
     border-radius: 10px;
     background-color: #000000;
@@ -372,9 +385,9 @@
     position: relative;
 }
 
-.post_AddForm .amount_Control {
+/* .post_AddForm .amount_Control {
     padding-left: 58px;
-}
+} */
 
 .post_AddForm .amount div {
     position: absolute;
@@ -396,26 +409,74 @@
 
 .post_AddForm .amount div p {
     position: absolute;
-   top:5px
+    top: 5px
 }
 
-  .css-1u9des2-indicatorSeparator{
+.css-1u9des2-indicatorSeparator {
     width: 0px !important;
- }
- .post_Add_Locationtype {
+}
+
+.post_Add_Locationtype {
     margin-top: 16px;
     margin-bottom: 31px;
- }
- .post_Add_EmploymentEnquiry{
+}
+
+.post_Add_EmploymentEnquiry {
     margin-top: 13px;
     margin-bottom: 29px;
- }
- .css-13cymwt-control .css-1xc3v61-indicatorContainer{
+}
+
+.css-13cymwt-control .css-1xc3v61-indicatorContainer {
     color: white !important;
- }
- .names_Control::placeholder{
+}
+
+.names_Control::placeholder {
     color: #999999 !important;
- }
- .companyName_Control::placeholder{
+}
+
+.companyName_Control::placeholder {
     color: #999999 !important;
- }
+}
+
+.post_Add_Error {
+    height: 51px;
+    background: #A8ECDC;
+    border-radius: 10px;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
+    text-align: center;
+    color: #231F20;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.post_Add_priceDiv .btn{
+width: 9% !important;
+   margin-top: 0px;
+   font-weight: 400;
+    font-size: 22px !important;
+    line-height: 25px;
+    color: #FFFFFF;
+background-color: black;
+}
+.post_Add_priceDiv{
+    width: 100% !important;
+}
+
+.post_Add_priceDiv .dropdown-toggle::after{
+    display: none !important;
+}
+.post_Add_priceDiv .input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback){
+width: 91% !important;
+}
+.post_Add_priceDiv .input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback){
+width: 91% !important;
+}
+.css-a0izu-control{
+    background-color: black !important;
+    color: white !important;
+}
