--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -552,4 +552,16 @@
 }
 
 
+.advertisment iframe {
+    width: 100%;
+    height: 140px;
+    width:1px;
+    min-width:100%;
+    width:100%;
+    height:100%;
+    border:0;
+    scroll-behavior: unset;
+    
+}
+
 
