--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -98,7 +98,7 @@
 
 .bannerImg {
     text-align: center;
-    margin: 30px 0px;
+    margin-bottom: 10px;
 }
 .bannerImg iframe {
     width: 100%;
