--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -36,3 +36,8 @@
 .collapsed .hideIcon {
     display: block;
 }
+
+.alertBody .modal-dialog {
+    max-width: 342px !important;
+    height: 302px;
+}
