--- a/src/appComponents/ClassiFieds/ClassifiedFilter.module.css
+++ b/src/appComponents/ClassiFieds/ClassifiedFilter.module.css
@@ -5,15 +5,25 @@
     margin-top: 11px;
     position: absolute;
     z-index: 9999;
+    background: #FFFFFF;
+    box-shadow: 4px 4px 10px rgb(123 123 123 / 25%);
+    border-radius: 10px;
 }
 
+
 .optionBox input {
-    border: none;
-    padding: 5px 9px;
+    border: none !important;
+    padding: 5px 9px !important;
+    background-color: #EDEDED !important;
+    width: 100% !important;
+    border-radius: 8px !important;
+    width: 318px !important;
+}
+
+.optionBox {
     background-color: #EDEDED;
-    width: 100%;
+    padding: 2px 11px;
     border-radius: 8px;
-    width: 318px;
 }
 
 .optionBox .inputBox {
@@ -35,6 +45,14 @@
     outline: none !important;
     display: none !important;
     border: none;
+}
+
+
+
+.ClassifiedFilter_inputBox__qFEo\+ input {
+    background-color: #EDEDED;
+    border: none;
+    border-radius: 8px;
 }
 
 
@@ -60,13 +78,48 @@
 }
 
 .ClassifiedsearchBar svg {
-    color: #FFFFFF;
+    color: #EC4624;
     font-weight: 700;
-    background: #dc9586bd;
+    background: #e9cec894;
     padding: 6px;
-    width: 34px;
-    height: 36px;
+    width: 30px;
+    height: 34px;
     border-radius: 50%;
-    margin-left: 6px;
+    margin-left: 15px;
     cursor: pointer;
+    font-size: 0px;
 }
+
+
+/* .inputBox .form-control {
+    background-color: #f6f6f6;
+    border: none;
+    height: 40px;
+} */
+
+.mb-3 input {
+    background-color: #EDEDED !important;
+    border: none !important;
+    width: 318px !important;
+}
+
+.inputBox .form-control:focus {
+    background-color: #f5f5f5 !important;
+    outline: none !important;
+    border: none !important;
+    box-shadow: none;
+}
+
+.inputBox .form-control::placeholder {
+    color: #000000 !important;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.selectOption .css-tj5bde-Svg {
+    fill: #000000 !important;
+    width: 28px !important;
+    height: 28px !important;
+    display: none !important;
+}
+
