--- a/src/appComponents/DealTypesModule/CompanyData.module.css
+++ b/src/appComponents/DealTypesModule/CompanyData.module.css
@@ -26,10 +26,11 @@
     background: #FFFFFF;
     box-shadow: 0px 25px 40px rgb(0 0 0 / 3%);
     border-radius: 6px;
-    margin-top: 15px;
+    margin-top: 10px;
     padding: 20px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .productImg {
@@ -54,6 +55,7 @@
     font-size: 22px;
     line-height: 27px;
     color: #000000;
+    line-break: anywhere;
 }
 
 .productDiscription p {
