--- a/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
+++ b/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
@@ -28,3 +28,8 @@
     padding-left: 10px;
 }
 
+@media only screen and (min-width: 320px) and (max-width: 379px) {
+    .headerAfterProfile{
+        height: 53px !important;
+    }
+}
