--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -4,6 +4,9 @@
     box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.03);
     border-radius: 6px;
     margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-pills .nav-link,
